--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ baseurl: "/CompPhyWithPython" # the subpath of your site, e.g. "/blog".
 # Github and twitter are optional:
 minima:
   social_links:
-    facebook: fastdotai
+    google: fastdotai
     github: fastai
 
 # Set this to true to get LaTeX math equation support
